added background image

--- a/Frontend development/Challenge/multiplication.html
+++ b/Frontend development/Challenge/multiplication.html
@@ -12,7 +12,9 @@
         }
 
         body {
-            background-color: aqua;
+            background-image: url("dice-2415399_1280.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,6 +24,7 @@
 
         .card {
             background-color: white;
+            width: 300px;
             min-width: 30%;
             padding: 10px;
             border-radius: 5px;
