--- a/Frontend development/Challenge/multiplication.html
+++ b/Frontend development/Challenge/multiplication.html
@@ -155,9 +155,9 @@
         let second_number = document.getElementById("second_number");
         let wrong = document.getElementById("wrong");
         let right = document.getElementById("right");
-        let total_questions = document.getElementById("total_questions");
-        let input_number = document.getElementById("input_number");
-        let btn = document.getElementById("btn");
+        let total_questions_el = document.getElementById("total_questions");
+        let total_questions = 0;
+        let player_answer = document.getElementById("input_number").value;
         let start_btn = document.getElementById("start_btn")
         let countdown = document.getElementById("countdown");
         let time_left = 5;
@@ -190,15 +190,15 @@
             return Math.floor(Math.random() * (max - min)) + min;
         }
         confirm_btn.addEventListener("click", () => {
-            calculate(current_question)
+            calculateAgain()
             clearInterval(timer)
-            time_left == 5;
+            countdown.innerHTML = 0;
+            time_left = 0
             timer = setInterval(() => {
 
                 countDown();
             }, 1000);
             generateQuestion()
-            startCountdown()
         })
 
         function generateQuestion() {
@@ -210,6 +210,7 @@
             current_question = []
             current_question.push(Number(first_number.innerHTML))
             current_question.push(Number(second_number.innerHTML))
+            total_questions.innerHTML = questions.length
             // callback();
         }
         function startGame() {
@@ -232,29 +233,40 @@
         function countDown() {
             time_left--;
             time_left = time_left < 0 ? 0 : time_left;
-            // let [student_answer, right_answer] = calculate(current_question)
-            // let isCorrect = student_answer === right_answer ? true : false
             if (time_left == 0 && input_number.innerHTML == "") {
                 wrong.innerHTML++
                 score.innerHTML--
+                // calculateAgain()
                 time_left = 5
-                generateQuestion()
+                // generateQuestion()
+                // total_questions.innerHTML = questions.length
             }
             countdown.innerHTML = time_left;
-            // if(time_left < 0) {
-            //     clearInterval(timer)
-            //     time = 5;
-
-            // } else {
-            //     countdown.innerHTML = time_left--;
-            // }
-
         }
 
-        function calculate(operands) {
-            questions.push(operands)
-            console.log(operands)
-            let [a, b] = operands
+        // function calculate(operands) {
+            
+        //     questions.push(operands)
+        //     console.log(operands)
+        //     let [a, b] = operands
+        //     let student_answer = Number(input_number.value);
+        //     let right_answer = a * b
+        //     input_number.value = "";
+        //     if (student_answer === right_answer) {
+        //         right.innerHTML++
+        //         score.innerHTML++
+        //     } else {
+        //         wrong.innerHTML++
+        //         score.innerHTML--
+        //     }
+        //     total_questions.innerHTML = questions.length
+        //     console.log(total_questions.innerHTML)
+        //     return [student_answer, right_answer]
+        // }
+
+        function calculateAgain() {
+            questions.push(current_question)
+            let [a, b] = current_question;
             let student_answer = Number(input_number.value);
             let right_answer = a * b
             input_number.value = "";
@@ -267,7 +279,7 @@
             }
             total_questions.innerHTML = questions.length
             console.log(total_questions.innerHTML)
-            return [student_answer, right_answer]
+            // return [student_answer, right_answer]
         }
     </script>
 </body>
